force-app/main/default/objects/Lead/fields/Last_Stage_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Change_Date__c</fullName>
    <label>Last Stage Change Date</label>
    <type>Date</type>
</CustomField>