force-app/main/default/objects/Lead/fields/Project_Folder__c.field-meta.xml
<CustomField>
    <fullName>Project_Folder__c</fullName>
    <label>Project Folder</label>
    <type>Url</type>
</CustomField>