force-app/main/default/objects/Lead/fields/Sync_to_ClickUp_GDrive__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_ClickUp_GDrive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to ClickUp &amp; GDrive</label>
    <type>Checkbox</type>
</CustomField>